# NSA

./: configloader.py  earth.py  main.py  orbit.py  parser.py  pyproject.toml  satellite.py  satelliteanalyzer.py  satellitesystem.py
config/: default.json
net/: almanacdownloader.py
tests/: test_basis.py  test_earth.py  test_orbit.py  test_sattelite.py  test_vector.py
utils/: __init__.py  basis.py  vector.py
