[tool.poetry]
name = "satelliteanalyzer"
version = "0.1.0"
description = ""
authors = ["Artem Mikhailov <artem.mihaylov.2017@gmail.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
numpy = "^1.22.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
