[tool.poetry]
name = "satelliteanalyzer"
version = "0.1.0"
description = ""
authors = ["Artem Mikhailov <artem.mihaylov.2017@gmail.com>"]
license = "GPLv2"

[tool.poetry.dependencies]
python = "^3.10.5"
requests = "^2.27.1"
numpy = "^1.22.2"
scipy = {version = "^1.8.1", python = ">=3.10.5,<3.11"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.961"
black = "^22.3.0"
pyright = "^1.1.254"
pyqtgraph = "^0.12.4"
PyQt5 = "^5.15.6"
PyOpenGL = "^3.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]

[tool.black]
target-version = ['py310']
